Html de Index completado

--- a/Johan_Reinoso_AP1_P1/Components/_Imports.razor
+++ b/Johan_Reinoso_AP1_P1/Components/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using Johan_Reinoso_AP1_P1
 @using Johan_Reinoso_AP1_P1.Components
+@using Johan_Reinoso_AP1_P1.Components.Models
+@using Johan_Reinoso_AP1_P1.Components.Services
+
