Nombres de componentes cambiados

--- a/Johan_Reinoso_AP1_P1/Components/_Imports.razor
+++ b/Johan_Reinoso_AP1_P1/Components/_Imports.razor
@@ -10,5 +10,6 @@
 @using Johan_Reinoso_AP1_P1.Components
 @using Johan_Reinoso_AP1_P1.Components.Models
 @using Johan_Reinoso_AP1_P1.Components.Services
+@using Johan_Reinoso_AP1_P1.Components.Pages.RegistroPages
 @using Blazored.Toast
 @using Blazored.Toast.Services
