--- a/Johan_Reinoso_AP1_P1/Components/Pages/RegistroPages/AportesCreate.razor
+++ b/Johan_Reinoso_AP1_P1/Components/Pages/RegistroPages/AportesCreate.razor
@@ -39,7 +39,7 @@
 				<div class="btn-group" role="group">
 					<button type="reset" class="btn btn-outline-primary bi bi-arrow-clockwise" @onclick="Nuevo"> Limpiar</button>
 					<button type="submit" class="btn btn-outline-success bi bi-floppy"> Guardar</button>
-					<a href="/Aporte/Index" class="btn btn-outline-secondary bi bi-arrow-left">Volver</a>
+					<a href="/Aportes/Index" class="btn btn-outline-secondary bi bi-box-arrow-left"> Volver</a>
 				</div>
 			</div>
 		</div>
