--- a/Johan_Reinoso_AP1_P1/Components/Pages/RegistroPages/AportesIndex.razor
+++ b/Johan_Reinoso_AP1_P1/Components/Pages/RegistroPages/AportesIndex.razor
@@ -12,14 +12,14 @@
 		</div>
 
 		<div class="card-body">
-			<div class="d-flex justify-content-between align-items-center mb-5">
-				<h5 class="card-title mb-0">Filtros de B&uacute;squeda</h5>
-				<a href="/Registro/Create" class="btn btn-success">
+			<div class="d-flex justify-content-between align-items-center mb-4">
+				<h5 class="card-title mb-0"><strong>Filtros de B&uacute;squeda</strong></h5>
+				<a href="/Aportes/Create" class="btn btn-success">
 					<span class="bi bi-plus-square"></span> Crear
 				</a>
 			</div>
 
-			<div class="row g-3 align-items-end mb-4">
+			<div class="row g-3 align-items-end mb-3">
 
 				<div class="col-md-3">
 					<label class="form-label"><strong>Filtrar por</strong></label>
@@ -34,7 +34,7 @@
 				<div class="col-md-3">
 					<label class="form-label"><strong>Buscador</strong></label>
 					<div class="input-group">
-						<input class="form-control" @bind="ValorFiltro" placeholder="Buscar" />
+						<input class="form-control" @bind="ValorFiltro" @oninput="FiltroCambiado" placeholder =" Buscar" />
 						<button type="button" class="btn btn-outline-primary bi bi-search" @onclick="Buscar"></button>
 
 					</div>
@@ -59,7 +59,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="table-responsive mt-5">
+		<div class="table-responsive mt-2">
 			<table class="table table-hover">
 				<thead>
 					<tr>
@@ -86,14 +86,15 @@
 
 		</div>
 			<div class="container mt-4 d-flex justify-content-between align-items-end">
-				<label class="form-label">
+				<label class="form-label col-md-1">
 					<strong>Conteo:</strong>
 					<input type="text" class="form-control" value="@ListaAportes.Count" readonly />
 				</label>
 
-			<label class="form-label">
+			<label class="form-label col-md-2">
 				<strong>Total:</strong>
-				<input type="text" class="form-control" value="@ListaAportes.Sum(m=>m.Monto)" readonly /></label>
+				<input type="text" class="form-control" value="@ListaAportes.Sum(m => m.Monto).ToString("N2")" readonly />
+			</label>
 			</div>
 	</div>
 </div>
